# devBoard_stm32f407vet6_rust

./: Cargo.toml  Embed.toml  README.md  build.rs  memory.x
.cargo/: config.toml
src/: main.rs  rcc.rs
