[package]
name = "devBoard_stm32f407vet6"
version = "0.1.0"
authors = ["rb bobr <dannobarret@gmail.com>"]
edition = "2021"

[dependencies]
# добавлено из примера-------------------------------------------------------------------------
# Change stm32f429zi to your chip name, if necessary.
embassy-stm32 = { version = "0.1.0", features = ["defmt", "stm32f407ve", "unstable-pac", "memory-x", "time-driver-tim4", "exti", "chrono"] }
embassy-sync = { version = "0.6.1", features = ["defmt"] }
embassy-executor = { version = "0.6.3", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.2", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-usb = { version = "0.3.0", features = ["defmt" ] }
embassy-net = { version = "0.4.0", features = ["defmt", "tcp", "dhcpv4", "medium-ethernet", ] }
embassy-net-wiznet = { version = "0.1.0", features = ["defmt"] }
embassy-futures = { version = "0.1.0" }

defmt = "0.3"
defmt-rtt = "0.4"
# добавлено из примера-------------------------------------------------------------------------



# Генерация -----------------------------------------------------------------------------------
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] } #изменения
# cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-probe = { version = "0.3.1", features = ["defmt"] }
# Генерация -----------------------------------------------------------------------------------



# добавлено из примера-------------------------------------------------------------------------
# panic-probe = { version = "0.3", features = ["print-defmt"] }
embedded-hal = "1.0.0"
embedded-hal-bus = { version = "0.2", features = ["async"] }
embedded-io = { version = "0.6.0" }
embedded-io-async = { version = "0.6.1" }
futures-util = { version = "0.3.30", default-features = false }
heapless = { version = "0.8", default-features = false }
critical-section = "1.1"
nb = "1.1.0"
embedded-storage = "0.3.1"
micromath = "2.0.0"
usbd-hid = "0.8.1"
static_cell = "2"
chrono = { version = "^0.4", default-features = false}
# добавлено из примера-------------------------------------------------------------------------


[dependencies.stm32f4xx-hal]
version = "0.22.0"
features = ["stm32f407", "defmt", ]

# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = "s"

[profile.release]
codegen-units = 1
incremental = false
debug = true
lto = true
opt-level = "s"
